tests-integration/tests/roundtrip/invalid/semantic/typecheck/mismatched_equality_int_bool/input.essence
find x : int(1..10)
find b : bool
such that x = b
